--- a/exercicio.html
+++ b/exercicio.html
@@ -7,12 +7,18 @@
     <title>Formulário</title>
 </head>
 <body>
+        <h1>Formulário de Cadastro</h1>
     <form>
-        <label for="user" >Usuário: </label>
+        <label for="user" >Nome: </label>
         <input id="user" type="text" />
+        <br />
+        <label for="email" >E-mail: </label>
+        <input id="email" type="text" />
         <br />
         <label for="password" >Senha: </label>
         <input id="password" type="password" />
+        <br />
+        <button type="submit" >Cadastrar</button>
     </form>
 </body>
 </html>
