--- a/exercicio.html
+++ b/exercicio.html
@@ -13,7 +13,7 @@
         <input id="user" type="text" />
         <br />
         <label for="email" >E-mail: </label>
-        <input id="email" type="text" />
+        <input id="email" type="email" />
         <br />
         <label for="password" >Senha: </label>
         <input id="password" type="password" />
